# CV_Laboratory

Edge_and_line_detection/task1/: main.cpp
Edge_and_line_detection/task2/: main.cpp
Edge_and_line_detection/task3/: main.cpp
Edge_and_line_detection/task4/: main.cpp
Filters_and_Histograms/: CMakeLists.txt  main.cpp
Filters_and_Histograms/include/: ImageFilters.h
Filters_and_Histograms/src/: ImageFilters.cpp
Image_Matching/: CMakeLists.txt  main.cpp
Image_Matching/include/: FeatureMatchers.h
Image_Matching/src/: FeatureMatchers.cpp
Introduction_OpenCV/: es6
Lab0/: es1  es3  es4  es5  file2.cpp  file3.cpp
Lab1/: asdfasfsaf  main.cpp
Lab1/src/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  main.cpp
Lab1/task1/: CMakeLists.txt  task1.cpp
Lab1/task2/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  main.cpp
Mouse_Callback_and_Color_Segmentation/: main.cpp
Mouse_Callback_and_Color_Segmentation/task1/: CMakeLists.txt  main.cpp
Mouse_Callback_and_Color_Segmentation/task2/: CMakeLists.txt  main.cpp
Mouse_Callback_and_Color_Segmentation/task3/: CMakeLists.txt  main.cpp  task3.cpp
Mouse_Callback_and_Color_Segmentation/task4/: CMakeLists.txt  main.cpp
Mouse_Callback_and_Color_Segmentation/task5/: CMakeLists.txt  main.cpp
Mouse_Callback_and_Color_Segmentation/task6/: CMakeLists.txt  main.cpp
OpenCV and C++/: es2  file1.cpp  file4.cpp  file5.cpp  file6.cpp
